<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sim_nvblox</name>
  <version>0.0.1</version>
  <description>TODO: Package description</description>
  <maintainer email="Kasperhansen1998@hotmail.com">airlab</maintainer>
  <license>Apache-2.0</license>

 <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>isaac_ros_common</build_depend>

  <!-- Utils -->
  <exec_depend>isaac_ros_launch_utils</exec_depend>
  <exec_depend>nvblox_ros_python_utils</exec_depend>

  <!-- Nvblox -->
  <exec_depend>nvblox_ros</exec_depend>

  <!-- Visual SLAM -->
  <exec_depend>isaac_ros_visual_slam</exec_depend>

  <!-- Segmentation -->
  <depend>isaac_ros_peoplesemseg_models_install</depend>
  <exec_depend>nvblox_image_padding</exec_depend>
  <exec_depend>isaac_ros_dnn_image_encoder</exec_depend>
  <exec_depend>isaac_ros_triton</exec_depend>
  <exec_depend>isaac_ros_unet</exec_depend>
  <exec_depend>semantic_label_conversion</exec_depend>

  <!-- Detection -->
  <depend>isaac_ros_peoplenet_models_install</depend>
  <exec_depend>isaac_ros_detectnet</exec_depend>

  <test_depend>ament_cmake_copyright</test_depend>
  <test_depend>ament_cmake_lint_cmake</test_depend>
  <test_depend>isaac_ros_test_cmake</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>